Major Changes before presentation

--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -49,7 +49,7 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 
 
@@ -57,7 +57,7 @@
         <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -76,20 +76,19 @@
   </div>
 </nav>
 
-  <main>
-    <section id="hero-page" class="d-flex flex-column justify-content-center">
-  		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-  			<h1>Shared Services Center website research redesign</h1>
-  		</div>
-  		<div class="uppermargin">
-   			<div class="devicer"></div>
-  		</div>
-  </section><!-- End Portfolio Details -->
+
+    <section id="about-page" class="d-flex flex-column justify-content-center">
+      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <h1 align="center"><b>Shared Services Center website research redesign</b></h1>
+
+        <div class="devicer"></div>
+      </div>
+    </section>
 
     <div class="container">
 
-    			<p class="justified">
+    			<p class="justified uppermargin3">
     				<h3><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
     					<b class="textbackground3"> The Shared Services Center </b> (SSC),  is a one stop shop that is involved in the finances and business aspects for the University of Maryland, Baltimore County. </b>
