--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
           <div>
-             <p class="paragraph3" align="center"> <b class="textbackground2"> User Experience Researcher </b> at <b class="textbackground2 "> Thomson Reuters.</b> <!-- At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time.  I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p> -->
+             <p class="paragraph3" align="center">I am a<b class="textbackground2"> User Experience Researcher </b> at <b class="textbackground2 "> Thomson Reuters.</b> <!-- At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time.  I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p> -->
         </div>
 
     </div>
