--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<a href="navigational-aid.html#hero-page" class="skip">Skip to main content</a>
+<!-- <a href="navigational-aid.html#hero-page" class="skip">Skip to main content</a> -->
 	<title>Navigational Aid</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
@@ -55,11 +55,11 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarText">
 		<ul class="navbar-nav m-auto">
-			<li class="nav-item active">
+			<li class="nav-item">
 				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+				<a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
 			</li>
 
 			<li class="nav-item active">
@@ -78,29 +78,28 @@
 
 			<li class="nav-item active">
 				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
-			</li>
+			<!-- </li>
 			<li class="nav-item active">
 				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
-			</li>
+			</li> -->
 		</ul>
 	</div>
 </nav>
 <main data-aos="fade-up">
 
 	<!-- ======= Portfolio Details ======= -->
-	<section id="hero-page" class="d-flex flex-column justify-content-center">
-		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-			<h1>TRIDENT - Navigational Aid for runners who are blind</h1>
-		</div>
-		<div class="uppermargin">
- 			<div class="devicer"></div>
-		</div>
-</section><!-- End Portfolio Details -->
+  <section id="about-page" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+  <h1 align="center"><b>TRIDENT - Navigational Aid for runners who are blind</b></h1>
+
+      <div class="devicer"></div>
+    </div>
+  </section>
 
 <div class="container">
 
-			<p class="justified">
+			<p class="justified uppermargin3">
 				<h3><b>What's this project about?</b></h3>
 				<p class=" justified paragraph">
 					<b class="textbackground3">An industry-funded study to assess how blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
