--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,6 @@
   <title>Anirudh Nagraj - Projects</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <a href="#about-page" class="skip">Skip to main content</a>
 
   <!-- Favicons -->
   <link href="assets/img/Personal/Logo3.png" rel="icon">
@@ -43,7 +42,7 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span> <span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item">
@@ -100,7 +99,7 @@
                   <div class="row row-xs-sm sample-row">
               <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Rapid Research (Tax and Accounting)- Thomson Reuters</strong></h1></div>
                 <p class="paragraph2 justified uppermargin">
-                    At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time. (Bi-weekly cadence)
+                    At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. (Bi-weekly cadence)
                 </p>
 
               <a href="rapidresearch.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
