--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <a href="#hero-page" class="skip">Skip to main content</a>
   <title>Rapid Reserach </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -12,6 +11,7 @@
   <!-- Favicons -->
   <link href="assets/img/Personal/Logo3.png" rel="icon">
   <link href="assets/img/Personal/Logo3.png" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -49,15 +49,15 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link" href="research.html"><span class="whitecolor">WORK</span></a>
+        <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -76,31 +76,30 @@
   </div>
 </nav>
 
-    <section id="hero-page" class="d-flex flex-column justify-content-center">
-  		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-  			<h1>Rapid Research - Thomson Reuters</h1>
-  		</div>
-   			<div class="devicer"></div>
-  </section><!-- End Portfolio Details -->
+  <section id="about-page" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+  <h1 align="center"><b>Rapid Research - Thomson Reuters</b></h1>
+
+      <div class="devicer"></div>
+    </div>
+  </section>
 
     <div class="container">
 
-    			<p class="justified">
+    			<p class="justified uppermargin3">
     				<h3><b>Background and Role</b></h3>
     				<p class=" justified paragraph">
-              As the lead User Experience Researcher conducting rapid research (Qualitative in nature), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. Thus far, I have oprerated with two products - ONVIO and UltraTax.
-
-              Onvio Firm Management combines document management, time and billing, trial balance capabilities, online client collaboration, and project management in a single integrated product. (Source)
-
-              I operate in a smooth cycle that goes from intake meetings to writing report. The processes in between include tasks like understanding the concept/scenarios, writing screeners for recruitment, writing the facilitator guide, conducting studies with customers, meeting with internal stakeholders for debriefs. </p>
+              As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. Thus far, I have operated with two products - <b class="textbackground2">ONVIO</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
+              <p class=" justified paragraph">
+              I have a process that takes me from intake meetings to report readout meetings with key stakeholders. I own each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
 
               <figure>
                   <img src="assets/img/Personal/interview.png" class="avatar6" alt="interview graphic">
 
 
     		<h3 class="uppermargin"><strong>Outcomes</strong></h3>
-    		<p class="justified paragraph">Quick turnaround times (from intake request to disseminating findings), therby adding more flexibility in the way feedback is captured. High impact actionable qualitative insights delivered on a bi-weekly basis. Involves different features, concepts, and workflows across different products (ONVIO and UltraTax)</p>
+    		<p class="justified paragraph">Quick turnaround times (from intake requests to disseminating findings) and adding more flexibility in how feedback is captured. High-impact, actionable qualitative insights delivered on a bi-weekly basis. Involves different features, concepts, and workflows across different products (ONVIO and UltraTax)</p>
 
         <div class="counter">
             <div class="container">
@@ -130,7 +129,7 @@
                      <div class="col-12 col-lg-3">
                        <div class="count-up">
                             <p class="counter-count">20</p>
-                            <h3>Unique Concepts and counting</h3>
+                            <h3>Unique Features and counting</h3>
                         </div>
                     </div>
                 </div>
@@ -139,17 +138,21 @@
 
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
-    <ul><li class="justified paragraph">  Exhaustive Recruitment process may lead to a delay if other studies are in the queue.</li>
-    <li class="justified paragraph"> Difficult to fit in all the questions present in the guide within 30 minutes.</li>
+    <ul><li class="justified paragraph">  An exhaustive Recruitment process may lead to a delay if other studies are in the queue.</li>
+    <li class="justified paragraph"> Occasionally, it isn't easy to fit all the questions in the guide within the session duration.</li>
     <li class="justified paragraph"> Content importance.</li>
     <li class="justified paragraph">
-      Since each research study has a different workflow and can be related to a different product, understanding that workflow in a short period of time may prove challenging.
+      The uniqueness of each study.
     </li>
     <li class="justified paragraph">
-      Lack of statistical data to highlight the actual impact of the change on account of the insights provided.
+      Lack of data to highlight the actual impact of the change on account of the insights provided for self and process improvements.
+    </li>
+
+    <li class="justified paragraph">
+      As the study is directional, we must be flexible with the type of user responses obtained from our recruitment screeners. Strictly adhering to one particular criterion might not fetch users at all.
     </li>
     <li class="justified paragraph">
-      Relevance of using quantitative data (Metrics/SEQ) for such studies.
+      The relevance of using numbers (Metrics/SEQ) for such studies can be debated.
     </li>
     </ul>
 
@@ -186,20 +189,26 @@
   <section>
     <div class="container">
       <h3><b>Impact</b>
-      <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com</b>. </p>
-      <p class="justified paragraph">Simpler navigation across pages. </p>
-      <p class="justified paragraph">Placement of images where required for improved readability </p>
+        <figure>
+            <img src="assets/img/Personal/bullseye.png" class="avatar6" alt="bulls eye">
+      <ul><li class="justified paragraph">The results from my studies have helped  teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
+      <li class="justified paragraph">Incorporating participants with disabilities in the studies. Our team is the first research team at TR to incorporate such participants.</li>
+      <li class="justified paragraph">Identifying key areas of enhancements and improved user experience based on qualitative data provided by the customers.</li>
+      <li class="justified paragraph">This type of directional research helps break down complex workflows into smaller scenarios, enabling the streamlining of the product roadmap.</li>
+      <li class="justified paragraph">Increasing the scope of rapid research to other products and verticals within Thomson Reuters.</li>
 
     </div>
 
   <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
-        <p class="justified paragraph">Depending on the application and development of the features and improvements provided by the participants, long term observation would be beneficial to measure the impact and success of the proposed changes.  Without numbers, it becomes difficult for for UX Researchers to measure the true impact of the recommendations provided.</p>
+        <p class="justified paragraph">Continue this type of qualitative research with more features and workflows. Experiment with SEQ and content-related metrics to gain better insights with Rapid Research. However, with numbers and data to highlight the effect of design changes after rapid research studies, it is easier to measure the true impact of the insights obtained from Rapid Research.
+</p>
 
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
-    80 minute interviews are exhaustive and recruiting is a lenghty process. As a researcher, it is paramount to have enormous patience until the study is done. Qualitative coding helps in analyzing the findings. One key takeaway is each participant's view is different and can lead to different perspectives. Bias plays a very important role in the type of answer provided by the user.
+    This type of qualitative research is as rigorous and fast-paced as they come. Thirty minutes is all we have with the customer, and often, the prototype drives the study, with the guide only being a support tool. The team must first study complex workflows to prioritize the features and tasks and then present them to the user. A significant part of such studies is the continuous interaction with members of the larger org ( Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners) and the customers. However, such a process proves difficult if no prototype is available or there is no context to what is being tested. Getting acclimatized to how rapid research works takes a little time, but once the dust settles, it is exciting and moves at lightspeed.
+
   </p>
   </div>
 
