--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<a href="about.html#about-page" class="skip">Skip to main content</a>
   <title>Anirudh Nagraj - About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -90,10 +89,10 @@
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
       <p class ="paragraph">
-		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity and inclusion. I've worked in companies like UserWorks, Inc. and LTI. Currently at Reuters, I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
+		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity, and inclusion. I've worked in companies like UserWorks, Inc. and LTI. Currently working at Thomson Reuters, I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
 
 
-            <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
+            <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Image of Anirudh Smiling at you.">
 
 
             <!-- <p class="justified paragraph">
@@ -109,13 +108,16 @@
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="paragraph">
-             By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. I am well versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, NVDA.   At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period of time.  I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
+              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The research technique depends on the requirements of the businesses, stakeholders, and users. I am well-versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, and NVDA.
+
+            </p>
+            <p class="paragraph justified"> At Reuters, I work as the lead researcher in the Rapid Research program, where I run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. I have an engineering background and a deeply rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build impactful products, bringing customers and businesses closer to one another.
 </p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
             <!-- <div class="row">
               <div class="col-md-8"> -->
-                <p class=" paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
+                <p class=" paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. If you do not find me at home, I am either traveling, or sitting at a Barnes & Noble store somewhere, thinking about what book to buy.</p>
                   <p class="paragraph"> I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time.   </p>
               </div>
               <!-- <div class="col-md-4">
