--- a/postal.html
+++ b/postal.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <a href="#hero-page" class="skip">Skip to main content</a>
   <title>USPS.com UX</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -49,7 +48,7 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 
 
@@ -57,7 +56,7 @@
         <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -76,30 +75,30 @@
   </div>
 </nav>
 
-    <section id="hero-page" class="d-flex flex-column justify-content-center">
-  		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-  			<h1>USPS.com® Website Usability Study at UserWorks, Inc. </h1>
-  		</div>
-   			<div class="devicer"></div>
-  		</div>
-  </section><!-- End Portfolio Details -->
+    <section id="about-page" class="d-flex flex-column justify-content-center">
+      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <h1 align="center"><b>USPS.com® Website Usability Study at UserWorks, Inc.</b></h1>
+
+        <div class="devicer"></div>
+      </div>
+    </section>
 
     <div class="container">
-
-    			<p class="justified">
+      <p class ="uppermargin3">
     				<h3><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> Our team at UserWorks conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users in new pages that included international shipping. They also wanted us to analyze features that could be added in the future but in accordance with what the users mention.
-             ** Note - not everything about the study is mentioned here on account of an NDA present.
-    				</p>
-    			</p>
+    					<b class="textbackground3"> While at UserWorks, I conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users on new pages that included international shipping. They also wanted us to analyze features that could be added in the future, per what the users mentioned.
+    				</p></p>
+
+          <figure>
+              <img src="assets/img/Personal/usps-page.png" class="img-fluid" alt="A page in USPS.com that was tested"><figcaption  align="center"><i>A page in USPS.com® that was tested</i></figcaption>
 
     			<h3 class ="uppermargin"><strong>My Role </strong></h3>
-    			<p class="justified paragraph">  As a User Experience Specialist, my task included conducting interviews, note-taking and data analysis for key pointers. My team and I then provided recommendations based on the analyzed data.</p>
+    			<p class="justified paragraph">  As a User Experience Specialist, my task included conducting interviews, note-taking, and data analysis for critical pointers. My team and I then provided recommendations based on the analyzed data.</p>
 
     		<h3 class="uppermargin"><strong>Outcome</strong></h3>
-    		<p class="justified paragraph"> UserWorks provided recommendations based on scenario-based testing/interviews for updated pages of USPS.com® </p>
+    		<p class="justified paragraph">Provided recommendations based on scenario-based testing/interviews for updated pages of USPS.com® </p>
 
         <h3 class="uppermargin"><strong>Goals</strong></h3>
         <p class="justified paragraph">
@@ -115,9 +114,9 @@
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
     <ul><li class="justified paragraph">  Combating participant no-shows</li>
     <li class="justified paragraph"> Maintaining attention span over 80 minute long interviews.</li>
-    <li class="justified paragraph"> Content question creation for interviews was time consuming</li>
+    <li class="justified paragraph"> The Facilitator Guide creation was time-consuming and exhaustive.</li>
     <li class="justified paragraph">
-      Prioritizing research findings and converting into meaningful recommndations.
+      Prioritizing research findings and converting into meaningful recommendations.
     </li>
     <li class="justified paragraph">
       Lack of statistical data to highlight the actual impact of the change on account of the recommendations provided.
@@ -151,7 +150,7 @@
 
         4 participants in each category were recruited, for a total of 4 mobile personal (consumer) sessions, 4 mobile business, 4 mobile hybrid (with 1 participating using a tablet), 4 desktop personal, 4 desktop business, and 4 desktop hybrid.
 
-        Other participant categories, such as business size (where applicable), age, education, location (urban, suburban, or rural), state, and how often they visited USPS.com were recruited to the best possible mix.
+        Other participant categories, such as business size (where applicable), age, education, location (urban, suburban, or rural), state, and how often they visited USPS.com® were recruited to the best possible mix.
 
   		</p>
   		<div class="row">
@@ -163,7 +162,7 @@
   			  </div>
   		</div>
   		<div class="col-md-6 uppermargin countermargin">
-  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Users of the USPS.com website<p>
+  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Users of the USPS.com® website<p>
 
   				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
 
@@ -193,7 +192,7 @@
     </li>
       </p>
     </ul>
-    <li class ="paragraph"> Most saw USPS.com as a cohesive website, rather than a “portal” of sorts.
+    <li class ="paragraph"> Most saw USPS.com® as a cohesive website, rather than a “portal” of sorts.
   </ul>
   </p>
 
@@ -209,7 +208,7 @@
   <section>
     <div class="container">
       <h3><b>Impact</b></h2>
-      <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com</b>. </p>
+      <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com®</b>. </p>
       <p class="justified paragraph">Simpler navigation across pages. </p>
       <p class="justified paragraph">Placement of images where required for improved readability </p>
 
@@ -217,12 +216,12 @@
 
   <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
-        <p class="justified paragraph">Depending on the application and development of the features and improvements provided by the participants, long term observation would be beneficial to measure the impact and success of the proposed changes.  Without numbers, it becomes difficult for for UX Researchers to measure the true impact of the recommendations provided.</p>
+        <p class="justified paragraph">Depending on the application and development of the features and improvements provided by the participants, long-term observation would be beneficial to measure the impact and success of the proposed changes. Without numbers, it becomes difficult for UX Researchers to measure the true effect of the recommendations provided</p>
 
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
-    80 minute interviews are exhaustive and recruiting is a lenghty process. As a researcher, it is paramount to have enormous patience until the study is done. Qualitative coding helps in analyzing the findings. One key takeaway is each participant's view is different and can lead to different perspectives. Bias plays a very important role in the type of answer provided by the user.
+  80-minute interviews are exhaustive, and recruiting is a lengthy process. As a researcher, it is paramount to have enormous patience until the study is complete. Qualitative coding helps in analyzing the findings. One key takeaway is that each participant's different views can lead to different perspectives. Bias plays a significant role in the type of answer the user provides. No-shows in long-drawn studies can prove tricky, so having back-up participants proves helpful.
   </p>
   </div>
 
