--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Rapid Reserach </title>
+  <title>Rapid Research </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
