--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <img src="assets/img/Personal/Main Image 4.png" class="avatar6" alt="">
 
-      <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+      <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep-rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
 
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
