--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
       <p class ="paragraph">
-		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity, and inclusion. I've worked in companies like UserWorks, Inc. and LTI. Currently working at Thomson Reuters, I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
+		  Glad you stopped by! Hello once again! I am Anirudh - a soccer loving, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity, and inclusion. I've worked for companies like Grid Dynamics (Client - Google), Thomson Reuters, UserWorks, Inc. and LTI. I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
 
 
             <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Image of Anirudh Smiling at you.">
@@ -108,11 +108,12 @@
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="paragraph">
-              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The research technique depends on the requirements of the businesses, stakeholders, and users. I am well-versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, and NVDA.
+              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value. <p class="paragraph justified"> I employ a mixed methods approach (viz., Context Interviews, Surveys, Benchmarking) and provide customer experience insights to businesses. With a specialized working knowledge of accessibility standards and tools (viz., JAWS, NVDA, ZoomText), I make the workplace, and products more inclusive and accessible. My pioneering strategies involving participants with disabilities in my usability study at Thomson Reuters brought about a fundamental change in the company's participant recruitment policies for product testing.
 
+            </p></p>
+
+            <p class="paragraph">I bring a unique blend of UX research experience from multiple domains and Accessibility, thereby helping businesses deliver products that cater to diverse audiences.
             </p>
-            <p class="paragraph justified"> At Reuters, I work as the lead researcher in the Rapid Research program, where I run qualitative studies on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. I have an engineering background and a deeply rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build impactful products, bringing customers and businesses closer to one another.
-</p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
             <!-- <div class="row">
