--- a/projects.html
+++ b/projects.html
@@ -94,12 +94,27 @@
             </div>
       </section> -->
 
-      <section class="container">
+		<section class="container">
+            <div class="container uppermargin grid default-grid">
+                  <div class="row row-xs-sm sample-row">
+              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Data Center Maintenance and Repair Software - Google for Grid Dynamics</strong></h1></div>
+                <p class="paragraph2 justified uppermargin">
+                    At Grid Dynamics, I worked for the client (Google) in their data center maintenance and repair software. </p>
+				<p class ="paragraph2 justified uppermargin2">I ran qualitative studies - conducting interviews, focus groups, creating and analyzing surveys, provide insights and recommendations based on user data to the broader design and engineering teams to create a product with a seamless experience for personnel at the data centers.</b>
+                </p>
+
+              <a href="dcms.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
+
+                <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/grid.jpeg" class="img-fluid" alt="Thomson Retuers Logo"></div></div>
+                </div>
+          </section>
+
+      <section class="containerblue">
             <div class="container uppermargin grid default-grid">
                   <div class="row row-xs-sm sample-row">
               <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Rapid Research (Tax and Accounting)- Thomson Reuters</strong></h1></div>
                 <p class="paragraph2 justified uppermargin">
-                    At Reuters, I work as the lead researcher on the rapid research program where we run qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. (Bi-weekly cadence)
+                    At Reuters, I worked as the lead researcher on the rapid research program where I ran qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. (Bi-weekly cadence)
                 </p>
 
               <a href="rapidresearch.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
@@ -109,7 +124,7 @@
           </section>
 
 
-      <section class="containerblue">
+      <section class="container">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>USPS.com Website Usability Study - UserWorks, Inc.</strong></h1></div>
@@ -125,7 +140,7 @@
 
 
 
-<section class="container">
+<section class="containerblue">
       <div class="container uppermargin grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
@@ -139,7 +154,7 @@
           </div>
     </section>
 
-    <section class="containerblue">
+    <!-- <section class="containerblue">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong>Shared Services Center website redesign</strong></h1></div>
@@ -152,7 +167,7 @@
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt="Image showing the revamped website inside a mockup of a MacBook pro."></div></div>
           </div>
     </section>
-
+ -->
 
 
 
