--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -79,7 +79,7 @@
 
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-  <h1 align="center"><b>Rapid Research - Thomson Reuters</b></h1>
+  <h1 align="center"><b>Rapid Research (Tax and Accounting)- Thomson Reuters</b></h1>
 
       <div class="devicer"></div>
     </div>
@@ -90,7 +90,7 @@
     			<p class="justified uppermargin3">
     				<h3><b>Background and Role</b></h3>
     				<p class=" justified paragraph">
-              As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. Thus far, I have operated with two products - <b class="textbackground2">ONVIO</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
+              As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. I have operated with two products - <b class="textbackground2">Onvio</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
               <p class=" justified paragraph">
               I have a process that takes me from intake meetings to report readout meetings with key stakeholders. I own each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
 
@@ -138,7 +138,7 @@
 
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
-    <ul><li class="justified paragraph">  An exhaustive Recruitment process may lead to a delay if other studies are in the queue.</li>
+    <ul><li class="justified paragraph">  An exhaustive recruitment process may lead to a delay if other studies are in the queue.</li>
     <li class="justified paragraph"> Occasionally, it isn't easy to fit all the questions in the guide within the session duration.</li>
     <li class="justified paragraph"> Content importance.</li>
     <li class="justified paragraph">
@@ -188,10 +188,10 @@
 
   <section>
     <div class="container">
-      <h3><b>Impact</b>
+      <h3><b>Impact</b></h3>
         <figure>
             <img src="assets/img/Personal/bullseye.png" class="avatar6" alt="bulls eye">
-      <ul><li class="justified paragraph">The results from my studies have helped  teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
+      <ul><li class="justified paragraph">The results from my studies have helped teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
       <li class="justified paragraph">Incorporating participants with disabilities in the studies. Our team is the first research team at TR to incorporate such participants.</li>
       <li class="justified paragraph">Identifying key areas of enhancements and improved user experience based on qualitative data provided by the customers.</li>
       <li class="justified paragraph">This type of directional research helps break down complex workflows into smaller scenarios, enabling the streamlining of the product roadmap.</li>
