--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -90,9 +90,9 @@
     			<p class="justified uppermargin3">
     				<h3><b>Background and Role</b></h3>
     				<p class=" justified paragraph">
-              As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I help make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. I have operated with two products - <b class="textbackground2">Onvio</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
+              As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I helped make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. I operated with two products - <b class="textbackground2">Onvio</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
               <p class=" justified paragraph">
-              I have a process that takes me from intake meetings to report readout meetings with key stakeholders. I own each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
+              The process takes me from intake meetings to report readout meetings with key stakeholders. I owned each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
 
               <figure>
                   <img src="assets/img/Personal/interview.png" class="avatar6" alt="interview graphic">
@@ -149,7 +149,7 @@
     </li>
 
     <li class="justified paragraph">
-      As the study is directional, we must be flexible with the type of user responses obtained from our recruitment screeners. Strictly adhering to one particular criterion might not fetch users at all.
+      As the study is directional, we demanded ourselves be flexible with the type of user responses obtained from our recruitment screeners. Strictly adhering to one particular criterion might not fetch users at all.
     </li>
     <li class="justified paragraph">
       The relevance of using numbers (Metrics/SEQ) for such studies can be debated.
@@ -159,7 +159,7 @@
     </div>
 
 <div class="container">
-  <h3 class ="uppermargin"><strong>Some Tools Involved In My Research</strong></h3>
+  <h3 class ="uppermargin"><strong>Tools Involved In My Research</strong></h3>
   <div class="row">
     <div class="col-md-6" align="center">
 
@@ -178,7 +178,7 @@
 <div class="container">
   <h3><Strong>Process</Strong></h3>
   <p class="justified paragraph">
-      I follow a rigorous, yet streamlined process for my qualitative studies.
+      I followed a rigorous, yet streamlined process for my studies.
     </p>
     <figure>
         <img src="assets/img/Personal/RR_study.png" class="img-fluid" alt="Study outline">
@@ -191,19 +191,19 @@
       <h3><b>Impact</b></h3>
         <figure>
             <img src="assets/img/Personal/bullseye.png" class="avatar6" alt="bulls eye">
-      <ul><li class="justified paragraph">The results from my studies have helped teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
-      <li class="justified paragraph">Incorporating participants with disabilities in the studies. Our team is the first research team at TR to incorporate such participants.</li>
+      <ul><li class="justified paragraph">The results from my studies helped teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
+      <li class="justified paragraph">Incorporating participants with disabilities in the studies. Our team was the first research team at Thomson Reuters to incorporate such participants.</li>
       <li class="justified paragraph">Identifying key areas of enhancements and improved user experience based on qualitative data provided by the customers.</li>
-      <li class="justified paragraph">This type of directional research helps break down complex workflows into smaller scenarios, enabling the streamlining of the product roadmap.</li>
-      <li class="justified paragraph">Increasing the scope of rapid research to other products and verticals within Thomson Reuters.</li>
+      <li class="justified paragraph">This type of directional research helped break down complex workflows into smaller scenarios, enabling the streamlining of the product roadmap.</li>
+      <li class="justified paragraph">We increased the scope of rapid research to other products and verticals within Thomson Reuters.</li>
 
     </div>
 
-  <div class="container">
+  <!-- <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
         <p class="justified paragraph">Continue this type of qualitative research with more features and workflows. Experiment with SEQ and content-related metrics to gain better insights with Rapid Research. However, with numbers and data to highlight the effect of design changes after rapid research studies, it is easier to measure the true impact of the insights obtained from Rapid Research.
 </p>
-
+ -->
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
